# python_01

./: README.md  exercicios.py  kpi.py  pyproject.toml
