[tool.poetry]
name = "python-01"
version = "0.1.0"
description = "Atividade 1 - Cálculo de KPI"
authors = ["Rafael Alvarenga <devrafaelalvarenga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
